[package]
name = "roller"
version = "0.1.0"
authors = ["Jacob Haslehurst <jacob@haslehurst.net>"]
edition = "2018"

[dependencies]
tonic = {git = "https://github.com/marcelbuesing/tonic.git", rev="6272dcfa18e116eab6cbf2aa176d5729ab805c47"}
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = {git = "https://github.com/marcelbuesing/tonic.git", rev="6272dcfa18e116eab6cbf2aa176d5729ab805c47"}
