[package]
name = "roller"
version = "0.1.0"
authors = ["Jacob Haslehurst <jacob@haslehurst.net>"]
edition = "2018"

[dependencies]
prost = "0.6"
async-std = { version = "1.4", features = ["attributes", "unstable"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.6"
rimd = { git = "https://github.com/RustAudio/rimd.git" }
coremidi = "0.4.0"
futures = "0.3.1"
palette = "0.5.0"

[build-dependencies]
prost-build = { version = "0.6" }
