[package]
name = "roller"
version = "0.1.0"
authors = ["Jacob Haslehurst <jacob@haslehurst.net>"]
edition = "2018"

[dependencies]
midi = {path = "../midi"}
ola_client = {path = "../ola_client"}
async-std = { version = "*", features = ["attributes", "unstable"] }
serde = { version = "*", features = ["derive"] }
toml = "*"
coremidi = "*"
futures = "*"
palette = "*"
rustc-hash = "*"
derive_more = "*"
indexmap = "*"
itertools = "*"
ordered-float = "*"
rand = "*"
lazy_static = "*"
