[package]
name = "roller"
version = "0.1.0"
authors = ["Jacob Haslehurst <jacob@haslehurst.net>"]
edition = "2018"

[dependencies]
midi = {path = "../midi"}
ola_client = {path = "../ola_client"}
roller_protocol = {path = "../roller_protocol"}
async-std = { version = "*", features = ["attributes", "unstable"] }
serde = { version = "*", features = ["derive"] }
toml = "*"
coremidi = "*"
crossbeam = "*"
futures = "*"
palette = "*"
rustc-hash = "*"
derive_more = "*"
indexmap = "*"
ordered-float = { version = "*", features = ["serde"] }
rand = "*"
lazy_static = "*"
jemallocator = "*"
itertools = "*"
warp = "*"
tokio = { version = "0.2" }
