[package]
name = "roller_protocol"
version = "0.1.0"
authors = ["Jacob Haslehurst <jacob@haslehurst.net>"]
edition = "2018"

[features]
wasm-bindgen = ["uuid/wasm-bindgen"]

[dependencies]
thiserror = "1.0"
serde = "1.0"
derive_more = "*"
indexmap = { version = "*", features = ["serde-1"] }
rustc-hash = "*"
palette = "*"
ordered-float = { version = "*", features = ["serde"] }
uuid = { version = "*", features = ["serde", "v4"] }
