[package]
name = "roller_protocol"
version = "0.1.0"
authors = ["Jacob Haslehurst <jacob@haslehurst.net>"]
edition = "2018"

[features]
wasm = ["uuid/wasm-bindgen", "rand/wasm-bindgen"]

[dependencies]
thiserror = "1.0"
serde = { version = "*", features = ["derive"] }
derive_more = "*"
rustc-hash = "*"
palette = "*"
ordered-float = { version = "*", features = ["serde"] }
uuid = { version = "*", features = ["serde", "v4"] }
itertools = "*"
rand = "*"
indexmap = "*"
