[package]
name = "roller_web"
version = "0.1.0"
authors = ["Jacob Haslehurst <jacob@haslehurst.net>"]
edition = "2018"

[dependencies]
roller_protocol = {path = "../roller_protocol"}
async-std = { version = "*", features = ["attributes", "unstable"] }
broadcaster = "*"
futures = "*"
rustc-hash = "*"
warp = "*"
tokio = { version = "1.8" }
bincode = "*"
