[package]
authors = ["Jacob Haslehurst <jacob@haslehurst.net>"]
edition = "2018"
name = "roller-web-ui"
readme = "README.md"
repository = "https://github.com/jacobh/roller"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
roller_protocol = {path = "../roller_protocol", features = ["wasm"]}
wasm-bindgen = "^0.2"
yew = { version = "0.17", features = ["web_sys"] }
im-rc = "*"
bincode = "*"
itertools = "*"

[dependencies.web-sys]
version = "0.3"
features = [
    "InputEvent"
]
