[package]
authors = ["Jacob Haslehurst <jacob@haslehurst.net>"]
edition = "2018"
name = "roller-web-ui"
readme = "README.md"
repository = "https://github.com/jacobh/roller"
version = "0.1.0"

# from https://github.com/rustwasm/wasm-pack/issues/886#issuecomment-667669802
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
roller_protocol = {path = "../roller_protocol", features = ["wasm"]}
wasm-bindgen = {version = "^0.2", features = ["nightly"]}
yew = { version = "0.17", features = ["web_sys"] }
im-rc = "*"
bincode = "*"
itertools = "*"

[dependencies.web-sys]
version = "0.3"
features = [
    "InputEvent",
    "HtmlCanvasElement",
]
